--- a/fundamentals-of-electronics-engineering-sem1.tex
+++ b/fundamentals-of-electronics-engineering-sem1.tex
@@ -16,7 +16,7 @@
 	urlcolor=cyan,
 }
 
-\author{Pranav Gade\thanks{notes from lectures by Dr. Somesh Kumar}}
+\author{Pranav Gade\thanks{notes from lectures by Dr. Somesh Kumar, and Dr. Niharika Anand}}
 \date{Dec. 2020 - Mar. 2020}
 \title{Fundamentals of Electronic Engineering}
 
@@ -877,5 +877,17 @@
 	\subsection{Current mirror circuit}
 	two identical transistors, output current is forced equal to input current.\\
 	
+	
+	\chapter{Operational Amplifiers(op-amp)}
+	\begin{itemize}
+		\item It is a \textbf{very high gain} amplifier(Differential Amplifier) with high input impedance and low output impedance
+		\item Operational = can perform mathematical operations on ac/dc signal like addition multiplication differentiation integration etc
+		\item Amplifier = amplifies duh
+		\item AKA Voltage controlled voltage source(vcvs)
+		\item applications - comparators, oscillators, regulators, regulators, filters, etc
+		\item \includegraphics[width=0.7\linewidth]{img/opamp}
+		\item \includegraphics[width=\linewidth]{img/opamp block}
+		\item \includegraphics[width=0.7\linewidth]{img/opamp pins}
+	\end{itemize}
 \end{document}
 
