--- a/fundamentals-of-electronics-engineering-sem1.tex
+++ b/fundamentals-of-electronics-engineering-sem1.tex
@@ -7,7 +7,7 @@
 \usepackage{graphicx}
 \usepackage{siunitx} % Provides the \SI{}{} and \si{} command for typesetting SI units
 \usepackage{gensymb} % Degree symbol
-
+\usepackage{pdfpages}
 \usepackage{hyperref}
 \hypersetup{
 	colorlinks=true,
@@ -879,15 +879,16 @@
 	
 	
 	\chapter{Operational Amplifiers(op-amp)}
-	\begin{itemize}
-		\item It is a \textbf{very high gain} amplifier(Differential Amplifier) with high input impedance and low output impedance
-		\item Operational = can perform mathematical operations on ac/dc signal like addition multiplication differentiation integration etc
-		\item Amplifier = amplifies duh
-		\item AKA Voltage controlled voltage source(vcvs)
-		\item applications - comparators, oscillators, regulators, regulators, filters, etc
-		\item \includegraphics[width=0.7\linewidth]{img/opamp}
-		\item \includegraphics[width=\linewidth]{img/opamp block}
-		\item \includegraphics[width=0.7\linewidth]{img/opamp pins}
-	\end{itemize}
+%	\begin{itemize}
+%		\item It is a \textbf{very high gain} amplifier(Differential Amplifier) with high input impedance and low output impedance
+%		\item Operational = can perform mathematical operations on ac/dc signal like addition multiplication differentiation integration etc
+%		\item Amplifier = amplifies duh
+%		\item AKA Voltage controlled voltage source(vcvs)
+%		\item applications - comparators, oscillators, regulators, regulators, filters, etc
+%		\item \includegraphics[width=0.7\linewidth]{img/opamp}
+%		\item \includegraphics[width=\linewidth]{img/opamp block}
+%		\item \includegraphics[width=0.7\linewidth]{img/opamp pins}	
+%	\end{itemize}
+	\includepdf[page=-]{img/op amp.pdf}
 \end{document}
 
