--- a/fundamentals-of-electronics-engineering-sem1.tex
+++ b/fundamentals-of-electronics-engineering-sem1.tex
@@ -881,5 +881,8 @@
 	\chapter{Operational Amplifiers(op-amp)}
 
 	\includepdf[page=-]{img/op amp.pdf}
+	\includepdf[page=-]{img/filters-intro.pdf}
+	\includepdf[page=-]{img/integrator-differentiator.pdf}
+	\includepdf[page=-]{img/filters.pdf}
 \end{document}
 
